--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "prettier": "^3.6.2",
     "rimraf": "^6.1.0",
     "vite": "^7.2.2"
+  },
+  "dependencies": {
+    "date-fns": "^4.1.0"
   }
 }
