--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "vite": "^7.2.2"
   },
   "dependencies": {
-    "date-fns": "^4.1.0"
+    "@vitejs/plugin-react": "^5.1.1",
+    "date-fns": "^4.1.0",
+    "locale": "^0.1.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   }
 }
