--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "lint-staged": "^16.2.6",
     "prettier": "^3.6.2",
     "rimraf": "^6.1.0",
-    "vite": "^7.2.2"
+    "vite": "^7.2.2",
+    "vite-plugin-pwa": "^1.2.0"
   },
   "dependencies": {
     "@vitejs/plugin-react": "^5.1.1",
